tests/param/valid/dhe.ggt
setting symmetric.           (* symmetric (leveled) multilinear map *)
levels 2.                    (* fixes the number of levels to 2 *)
problem_type decisional.

input
  [ 1
  , Y
  , forall i in [0, l - 1]: X^i
  , forall j in [l + 1, 2*l]: X^j ] @ 1.

challenge Y*X^l @ 2.