tests/param/error/decisional_not_highest_level.ggt
setting symmetric.
levels 3.
problem_type decisional.

input [ 1 ] @ 1.

challenge X @ 2.